--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.3.2",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "typescript": "^5"
