--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "dayjs": "^1.11.10",
     "next": "^14",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@mswjs/http-middleware": "^0.9.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/next-plugin": "^2.3.2",
+    "cors": "^2.8.5",
     "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "express": "^4.18.2",
+    "msw": "^2.0.13",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
