--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.20.0",
     "@faker-js/faker": "^8.3.1",
     "dayjs": "^1.11.10",
     "next": "^14",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18"
   },
