--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.9.2",
