--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth/core": "^0.20.0",
     "@faker-js/faker": "^8.3.1",
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "dayjs": "^1.11.10",
     "next": "^14",
     "next-auth": "^5.0.0-beta.3",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.9.2",
+    "@tanstack/eslint-plugin-query": "^5.17.20",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
