--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "return-fetch": "^0.4.5",
+    "return-fetch-json": "^0.4.5"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.9.2",
